--- a/release.json
+++ b/release.json
@@ -1,1 +1,1 @@
-[{"name":"Test1","vers":[{"id":0,"num":"1.0.16","rls":"2022-08-07T15:56:50.8727743+03:00","url":"https://github.com/jukryt/TestApi/releases/download/v1.0.16/Test.zip"}]}]
+[{"name":"Test1","vers":[{"id":0,"num":"1.0.16","rls":"2022-08-07T12:56:50.8727743+00:00","url":"https://github.com/jukryt/TestApi/releases/download/v1.0.16/Test.zip"}]},{"name":"Test2","vers":[{"id":0,"num":"1.0.1018","rls":"2022-09-20T17:27:28.4703934+00:00","url":"https://github.com/jukryt/TestApi/releases/download/v1.0.1018/releaser.zip"}]}]
